Temporary Fix for Github Logo Overflow
It is actually a really bad fix and most of the site needs to be redone to make it responsive, but we try our best here

--- a/tabs/projects/style.css
+++ b/tabs/projects/style.css
@@ -75,8 +75,8 @@
 }
 
 #github{
-    width:5vw;
-    height:5vw;
+    width:3vw;
+    height:3vw;
     margin-top:-10px;
 }
 
@@ -90,5 +90,5 @@
     margin-left: auto;
     margin-right:auto;
     width:40%;
-    
+
 }
